--- a/src/css/reactVideo.css
+++ b/src/css/reactVideo.css
@@ -1,5 +1,11 @@
+
+.react-video-box{
+    width: 100%;
+    height: 100%;
+}
+
+
 .react-video {
-    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
